--- a/index.html
+++ b/index.html
@@ -7,17 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Cam and Diane</h1>
-        <p>11/1/24 - infinity</p>
-    </header>
-
-    <nav>
-        <a href="our-story.html">Our Story</a>
-    </nav>
-
-    <main>
-        <p>Welcome to our site — a little dedication to us 💖</p>
-    </main>
+    <section class="hero">
+        <h1 class="names">Cam and Diane</h1>
+        <p class="date">11/1/24 – ∞</p>
+        <a href="our-story.html" class="btn">Our Story</a>
+    </section>
 </body>
 </html>
