--- a/our-story.html
+++ b/our-story.html
@@ -19,5 +19,10 @@
     </section>
 
     <a href="index.html" class="btn back-btn">Back to Home</a>
+
+    <div style="text-align:center; margin-top: 20px;">
+        <a href="love-letter.html" class="btn">Read Love Letter</a>
+    </div>
+    
 </body>
 </html>
