--- a/our-story.html
+++ b/our-story.html
@@ -6,7 +6,7 @@
     <title>Our Story</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="our-story-page">
     <section class="story-hero">
         <h1 class="quote">It’s always been you</h1>
     </section>
